@startuml User Service Class Diagram

package "ma.ensias.soa.user_service" {
    
    ' ========== ENTITIES ==========
    class User {
        -Long id
        -String username
        -String email
        -LocalDateTime createdAt
    }
    
    ' ========== DTOs ==========
    class CreateUserRequest {
        -String username
        -String email
    }
    
    class UserDTO {
        -Long id
        -String username
        -String email
    }
    
    ' ========== CONTROLLERS ==========
    class UserController {
        +createUser(CreateUserRequest): ResponseEntity<User>
        +getUserById(Long): ResponseEntity<User>
        +getUserByUsername(String): ResponseEntity<User>
        +getUserByEmail(String): ResponseEntity<User>
        +searchUsers(String): ResponseEntity<List<User>>
        +updateUser(Long, User): ResponseEntity<User>
        +deleteUser(Long): ResponseEntity<Void>
        +getAllUsers(): ResponseEntity<List<User>>
    }
    
    ' ========== SERVICES ==========
    class UserService {
        -UserRepository userRepository
        +createUser(CreateUserRequest): User
        +getUserById(Long): Optional<User>
        +getUserByUsername(String): Optional<User>
        +getUserByEmail(String): Optional<User>
        +searchUsersByUsername(String): List<User>
        +updateUser(User): User
        +deleteUser(Long): void
        +getAllUsers(): List<User>
    }
    
    ' ========== REPOSITORIES ==========
    interface UserRepository {
        +findById(Long): Optional<User>
        +findByUsername(String): Optional<User>
        +findByEmail(String): Optional<User>
        +findByUsernameContaining(String): List<User>
        +save(User): User
        +deleteById(Long): void
        +findAll(): List<User>
    }
    
    ' ========== CONFIG ==========
    class CorsConfig {
        +corsFilter(): CorsFilter
    }
    
    ' ========== RELATIONSHIPS ==========
    UserController --> UserService
    UserService --> UserRepository
    UserRepository ..> User
    UserController ..> CreateUserRequest
    UserController ..> UserDTO
    UserService ..> CreateUserRequest
    UserService ..> UserDTO
    
    note right of User
        Entity representing
        user profile information
    end note
    
    note right of UserService
        Business logic for
        user management
    end note

}

@enduml

